<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    android:paddingStart="23dp"
    android:paddingTop="30dp"
    android:paddingEnd="23dp"
    tools:context=".ui.fragments.InformationFragment">

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gothamssm_bold"
        android:text="@string/about"
        android:textColor="@color/strong" />

    <TextView
        android:id="@+id/tvAboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothamssm_book"
        android:text="@string/er_zijn_vele_variaties_van_passages_van_lorem_ipsum_beschikbaar_maar_het_merendeel_heeft_te_lijden_gehad_van_wijzigingen_in_een_of_andere_vorm_door_ingevoegde_humor_of_willekeurig_gekozen_woorden_die_nog_niet_half_geloofwaardig_ogen_als_u_een_passage_uit_lorum_ipsum_gaat_gebruiken_dient_u_zich_ervan_te_verzekeren_dat_er_niets_beschamends_midden_in_de_tekst_verborgen_zit_alle_lorum_ipsum_generators_op_internet_hebben_de_eigenschap_voorgedefinieerde_stukken_te_herhalen_waar_nodig_zodat_dit_de_eerste_echte_generator_is_op_internet_het_gebruikt_een_woordenlijst_van_200_latijnse_woorden_gecombineerd_met_een_handvol_zinsstructuur_modellen_om_een_lorum_ipsum_te_genereren_die_redelijk_overkomt_de_gegenereerde_lorum_ipsum_is_daardoor_altijd_vrij_van_herhaling_ingevoegde_humor_of_ongebruikelijke_woorden_etc"
        android:textColor="@color/medium"
        android:textSize="@dimen/body_input_hint_detail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/gothamssm_bold"
        android:text="@string/design_and_development"
        android:textColor="@color/strong"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBanner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/dtt_banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothamssm_book"
                android:text="@string/by_dtt"
                android:textColor="@color/strong"
                android:textSize="@dimen/subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/d_tt_nl"
                android:textColorLink="#6797ce"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>