<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.fragments.HousesOverviewFragment">

    <TextView
        android:id="@+id/tvDttRealEstate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/gothamssm_bold"
        android:text="@string/dtt_real_estate"
        android:textColor="@color/strong"
        android:textSize="@dimen/title_02_03"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="14dp"
        android:focusableInTouchMode="true"
        android:textSize="@dimen/body_input_hint_detail"
        app:boxBackgroundColor="@color/dark_gray"
        app:boxCornerRadiusBottomEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:endIconTint="@color/strong"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvDttRealEstate"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamssm_medium"
            android:hint="@string/search_for_a_home"
            android:lines="1"
            android:textColor="@color/strong"
            android:textColorHint="@color/medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHouses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiSearch"
        tools:listitem="@layout/item_house" />

    <LinearLayout
        android:id="@+id/llNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/search_state_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamssm_xlight"
            android:text="@string/no_results_found"
            android:textSize="@dimen/title_02_03" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothamssm_xlight"
            android:text="@string/perhaps_try_another_search"
            android:textSize="@dimen/title_02_03" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>